[package]
name = "wownero-epee"
version = "0.2.0"
description = "A library for working with `epee`-encoded data"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.79"

[lib]
name = "monero_epee"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
