[package]
name = "wownero-address"
version = "0.1.0"
description = "Rust implementation of Monero addresses"
license = "MIT"
repository = "https://github.com/Such-Software/monero-oxide/tree/main/monero-oxide/wallet/address"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.73"

[lib]
name = "monero_address"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
thiserror = { version = "2", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

monero-io = { path = "../../io", default-features = false, version = "0.1", package = "wownero-io" }
monero-ed25519 = { path = "../../ed25519", default-features = false, version = "0.1", package = "wownero-ed25519" }
monero-primitives = { path = "../../primitives", default-features = false, version = "0.1", package = "wownero-primitives" }
monero-base58 = { path = "../base58", default-features = false, version = "0.1", package = "wownero-base58" }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["std"] }

hex-literal = { version = ">= 0.4, <= 1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[features]
std = [
  "thiserror/std",

  "zeroize/std",

  "monero-io/std",
  "monero-ed25519/std",
  "monero-primitives/std",
  "monero-base58/std",
]
default = ["std"]
